--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
              </body>
 <section>
     <h1><b>Summary:</b><h1>
-    <h12It was difficult, stressful but worth it. <h2>
+    <h2>It was difficult, stressful but worth it. <h2>
         <p>Almost done<p>
   
 <section>
