--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
              </body>
 <section>
     <h1><b>Summary:</b><h1>
+<section>
+<section>
     <h2>It was difficult, stressful but worth it. <h2>
         <p>Almost done<p>
   
