--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
              </body>
 <section>
     <h1><b>Summary:</b><h1>
-<section>
-<section>
     <h2>It was difficult, stressful but worth it. <h2>
         <p>Almost done<p>
+     <h3 style="color: blue;"> Linux Hint </h3>
   
 <section>
 <body>
